--- a/test/tests.html
+++ b/test/tests.html
@@ -2,17 +2,13 @@
 <html>
 <head>
     <meta charset='UTF-8'/>
-    <meta http-equiv='content-type' content='text/html; charset=utf-8'/>
     <title>Tests</title>
-
     <link rel="stylesheet" href="lib/qunit/qunit/qunit.css" type="text/css"/>
-    <script src="lib/qunit/qunit/qunit.js"></script>
 </head>
 <body>
 <div id="qunit"></div>
-<!-- QUnit fills this with results, etc -->
-<div id='qunit-fixture'>
-    <!-- any HTML you want to be present in each test (will be reset for each test) -->
-</div>
+<div id="qunit-fixture"></div>
+<script src="lib/qunit/qunit/qunit.js"></script>
+<script src="tests/render.js"></script>
 </body>
 </html>
