--- a/test/tests.html
+++ b/test/tests.html
@@ -9,6 +9,7 @@
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
 <script src="lib/qunit/qunit/qunit.js"></script>
+<script src="lib/minerva/minerva.js"></script>
 <script src="tests/render.js"></script>
 </body>
 </html>
