--- a/test/tests.html
+++ b/test/tests.html
@@ -10,6 +10,6 @@
 <div id="qunit-fixture"></div>
 <script src="lib/qunit/qunit/qunit.js"></script>
 <script src="lib/minerva/minerva.js"></script>
-<script src="tests/render.js"></script>
+<script src=".build/render.js"></script>
 </body>
 </html>
