--- a/test/tests.html
+++ b/test/tests.html
@@ -11,6 +11,7 @@
 <script src="lib/qunit/qunit/qunit.js"></script>
 <script src="lib/minerva/minerva.js"></script>
 
+<script src=".build/primitives/size.js"></script>
 <script src=".build/measure.js"></script>
 <script src=".build/arrange.js"></script>
 <script src=".build/render.js"></script>
