--- a/test/tests.html
+++ b/test/tests.html
@@ -12,6 +12,7 @@
 <script src="lib/minerva/minerva.js"></script>
 
 <script src=".build/primitives/size.js"></script>
+<script src=".build/primitives/rect.js"></script>
 <script src=".build/measure.js"></script>
 <script src=".build/arrange.js"></script>
 <script src=".build/render.js"></script>
