--- a/test/tests.html
+++ b/test/tests.html
@@ -16,6 +16,7 @@
 <script src=".build/measure.js"></script>
 <script src=".build/arrange.js"></script>
 <script src=".build/size.js"></script>
+<script src=".build/processup.js"></script>
 <script src=".build/render.js"></script>
 
 </body>
