Fixed sizing tests.

--- a/test/tests.html
+++ b/test/tests.html
@@ -15,7 +15,7 @@
 <script src=".build/primitives/rect.js"></script>
 <script src=".build/measure.js"></script>
 <script src=".build/arrange.js"></script>
-<script src=".build/size.js"></script>
+<script src=".build/sizing.js"></script>
 <script src=".build/processdown.js"></script>
 <script src=".build/processup.js"></script>
 <script src=".build/render.js"></script>
