--- a/test/tests.html
+++ b/test/tests.html
@@ -13,12 +13,12 @@
 
 <script src=".build/primitives/size.js"></script>
 <script src=".build/primitives/rect.js"></script>
-<script src=".build/measure.js"></script>
-<script src=".build/arrange.js"></script>
-<script src=".build/sizing.js"></script>
-<script src=".build/processdown.js"></script>
-<script src=".build/processup.js"></script>
-<script src=".build/render.js"></script>
+<script src=".build/tapins/measure.js"></script>
+<script src=".build/tapins/arrange.js"></script>
+<script src=".build/tapins/sizing.js"></script>
+<script src=".build/tapins/processdown.js"></script>
+<script src=".build/tapins/processup.js"></script>
+<script src=".build/tapins/render.js"></script>
 
 </body>
 </html>
