--- a/test/tests.html
+++ b/test/tests.html
@@ -16,6 +16,7 @@
 <script src=".build/layout/tapins/measure.js"></script>
 <script src=".build/layout/tapins/arrange.js"></script>
 <script src=".build/layout/tapins/sizing.js"></script>
+<script src=".build/layout/tapins/draft.js"></script>
 <script src=".build/layout/tapins/processdown.js"></script>
 <script src=".build/layout/tapins/processup.js"></script>
 <script src=".build/layout/tapins/render.js"></script>
