Implemented walkDeep.  Unit tested mock version of walk via walkDeep.

--- a/test/tests.html
+++ b/test/tests.html
@@ -13,6 +13,9 @@
 
 <script src=".build/primitives/size.js"></script>
 <script src=".build/primitives/rect.js"></script>
+
+<script src=".build/mock.js"></script>
+
 <script src=".build/layout/tapins/measure.js"></script>
 <script src=".build/layout/tapins/arrange.js"></script>
 <script src=".build/layout/tapins/sizing.js"></script>
