Unit testing measure prepare/flush.

--- a/test/tests.html
+++ b/test/tests.html
@@ -24,5 +24,7 @@
 <script src=".build/core/tapins/processup.js"></script>
 <script src=".build/core/tapins/render.js"></script>
 
+<script src=".build/core/measure.js"></script>
+
 </body>
 </html>
