Unit testing arrange prepare/flush.

--- a/test/tests.html
+++ b/test/tests.html
@@ -25,6 +25,7 @@
 <script src=".build/core/tapins/render.js"></script>
 
 <script src=".build/core/measure.js"></script>
+<script src=".build/core/arrange.js"></script>
 
 </body>
 </html>
