Began building image process down pipeline to calculate render metrics.

--- a/test/tests.html
+++ b/test/tests.html
@@ -27,5 +27,7 @@
 <script src=".build/core/measure.js"></script>
 <script src=".build/core/arrange.js"></script>
 
+<script src=".build/controls/image/processdown.js"></script>
+
 </body>
 </html>
