--- a/test/tests.html
+++ b/test/tests.html
@@ -23,6 +23,7 @@
 <script src=".build/core/tapins/processdown.js"></script>
 <script src=".build/core/tapins/processup.js"></script>
 <script src=".build/core/tapins/render.js"></script>
+<script src=".build/core/tapins/hittest.js"></script>
 
 <script src=".build/core/measure.js"></script>
 <script src=".build/core/arrange.js"></script>
