Building basic layout definition.  Unit tested selection cursor.  Need to build and unit test Wrapping layout.

--- a/test/tests.html
+++ b/test/tests.html
@@ -30,5 +30,7 @@
 
 <script src=".build/controls/image/processdown.js"></script>
 
+<script src=".build/text/layout.js"></script>
+
 </body>
 </html>
