Broke out text render definition.

--- a/test/tests.html
+++ b/test/tests.html
@@ -31,6 +31,7 @@
 <script src=".build/controls/image/processdown.js"></script>
 
 <script src=".build/text/layout.js"></script>
+<script src=".build/text/render.js"></script>
 
 </body>
 </html>
