Updated unit tests to properly test TextBlockUpdater.

--- a/test/tests.html
+++ b/test/tests.html
@@ -30,8 +30,9 @@
 
 <script src=".build/controls/image/processdown.js"></script>
 
-<script src=".build/text/layout.js"></script>
-<script src=".build/text/render.js"></script>
+<script src=".build/controls/textblock/updater.js"></script>
+
+<script src=".build/text/layout/run.js"></script>
 
 </body>
 </html>
