Began unit testing grid measure tapins.

--- a/test/tests.html
+++ b/test/tests.html
@@ -28,6 +28,7 @@
 <script src=".build/core/measure.js"></script>
 <script src=".build/core/arrange.js"></script>
 
+<script src=".build/controls/grid/measure.js"></script>
 <script src=".build/controls/grid/arrange.js"></script>
 
 <script src=".build/controls/image/processdown.js"></script>
