Tested shape process up.

--- a/test/tests.html
+++ b/test/tests.html
@@ -38,6 +38,8 @@
 <script src=".build/text/layout/run.js"></script>
 
 <script src=".build/shapes/shape/measure.js"></script>
+<script src=".build/shapes/shape/arrange.js"></script>
+<script src=".build/shapes/shape/processup.js"></script>
 
 </body>
 </html>
