Testing and fixing getCursorFromPoint.

--- a/test/tests.html
+++ b/test/tests.html
@@ -41,5 +41,7 @@
 <script src=".build/shapes/shape/arrange.js"></script>
 <script src=".build/shapes/shape/processup.js"></script>
 
+<script src=".build/controls/textboxview/caret.js"></script>
+
 </body>
 </html>
