Adding vector tests.

--- a/test/tests.html
+++ b/test/tests.html
@@ -13,6 +13,7 @@
 
 <script src=".build/primitives/size.js"></script>
 <script src=".build/primitives/rect.js"></script>
+<script src=".build/primitives/vector.js"></script>
 
 <script src=".build/mock.js"></script>
 
