Moving distributables into /dist dir.

--- a/stress/index.html
+++ b/stress/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <script src="lib/minerva/minerva.js"></script>
+    <script src="lib/minerva/dist/minerva.js"></script>
     <script type="text/javascript">
         var runner;
         var require = {
