--- a/test/tests.html
+++ b/test/tests.html
@@ -9,7 +9,7 @@
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
 <script src="lib/qunit/qunit/qunit.js"></script>
-<script src="lib/minerva/minerva.js"></script>
+<script src="lib/minerva/dist/minerva.js"></script>
 
 <script src=".build/primitives/size.js"></script>
 <script src=".build/primitives/rect.js"></script>
