--- a/test/tests.html
+++ b/test/tests.html
@@ -11,39 +11,39 @@
 <script src="lib/qunit/qunit/qunit.js"></script>
 <script src="lib/minerva/dist/minerva.js"></script>
 
-<script src=".build/primitives/size.js"></script>
-<script src=".build/primitives/rect.js"></script>
-<script src=".build/primitives/matrix.js"></script>
-<script src=".build/primitives/vector.js"></script>
+<script src=".build/tests/primitives/size.js"></script>
+<script src=".build/tests/primitives/rect.js"></script>
+<script src=".build/tests/primitives/matrix.js"></script>
+<script src=".build/tests/primitives/vector.js"></script>
 
-<script src=".build/mock.js"></script>
+<script src=".build/tests/mock.js"></script>
 
-<script src=".build/core/tapins/measure.js"></script>
-<script src=".build/core/tapins/arrange.js"></script>
-<script src=".build/core/tapins/sizing.js"></script>
-<script src=".build/core/tapins/draft.js"></script>
-<script src=".build/core/tapins/processdown.js"></script>
-<script src=".build/core/tapins/processup.js"></script>
-<script src=".build/core/tapins/render.js"></script>
-<script src=".build/core/tapins/hittest.js"></script>
+<script src=".build/tests/core/tapins/measure.js"></script>
+<script src=".build/tests/core/tapins/arrange.js"></script>
+<script src=".build/tests/core/tapins/sizing.js"></script>
+<script src=".build/tests/core/tapins/draft.js"></script>
+<script src=".build/tests/core/tapins/processdown.js"></script>
+<script src=".build/tests/core/tapins/processup.js"></script>
+<script src=".build/tests/core/tapins/render.js"></script>
+<script src=".build/tests/core/tapins/hittest.js"></script>
 
-<script src=".build/core/measure.js"></script>
-<script src=".build/core/arrange.js"></script>
+<script src=".build/tests/core/measure.js"></script>
+<script src=".build/tests/core/arrange.js"></script>
 
-<script src=".build/controls/grid/measure.js"></script>
-<script src=".build/controls/grid/arrange.js"></script>
+<script src=".build/tests/controls/grid/measure.js"></script>
+<script src=".build/tests/controls/grid/arrange.js"></script>
 
-<script src=".build/controls/image/processdown.js"></script>
+<script src=".build/tests/controls/image/processdown.js"></script>
 
-<script src=".build/controls/textblock/updater.js"></script>
+<script src=".build/tests/controls/textblock/updater.js"></script>
 
-<script src=".build/text/layout/run.js"></script>
+<script src=".build/tests/text/layout/run.js"></script>
 
-<script src=".build/shapes/shape/measure.js"></script>
-<script src=".build/shapes/shape/arrange.js"></script>
-<script src=".build/shapes/shape/processup.js"></script>
+<script src=".build/tests/shapes/shape/measure.js"></script>
+<script src=".build/tests/shapes/shape/arrange.js"></script>
+<script src=".build/tests/shapes/shape/processup.js"></script>
 
-<script src=".build/controls/textboxview/caret.js"></script>
+<script src=".build/tests/controls/textboxview/caret.js"></script>
 
 </body>
 </html>
