Testing path.processup.calcActualSize.

--- a/test/tests.html
+++ b/test/tests.html
@@ -43,6 +43,8 @@
 <script src=".build/tests/shapes/shape/arrange.js"></script>
 <script src=".build/tests/shapes/shape/processup.js"></script>
 
+<script src=".build/tests/shapes/path/processup.js"></script>
+
 <script src=".build/tests/controls/textboxview/caret.js"></script>
 
 </body>
