--- a/test/tests.html
+++ b/test/tests.html
@@ -30,6 +30,8 @@
 <script src=".build/tests/core/measure.js"></script>
 <script src=".build/tests/core/arrange.js"></script>
 
+<script src=".build/tests/anon/updater.js"></script>
+
 <script src=".build/tests/controls/grid/measure.js"></script>
 <script src=".build/tests/controls/grid/arrange.js"></script>
 
