--- a/test/tests.html
+++ b/test/tests.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='UTF-8'/>
     <title>Tests</title>
-    <link rel="stylesheet" href="lib/qunit/qunit/qunit.css" type="text/css"/>
+    <link rel="stylesheet" href="/lib/qunit/qunit/qunit.css" type="text/css"/>
 </head>
 <body>
 <div id="qunit"></div>
