Building prerender hooks to run a command just before render.

--- a/test/tests.html
+++ b/test/tests.html
@@ -18,6 +18,8 @@
 
 <script src=".build/tests/mock.js"></script>
 
+<script src=".build/tests/engine/Surface.js"></script>
+
 <script src=".build/tests/core/tapins/measure.js"></script>
 <script src=".build/tests/core/tapins/arrange.js"></script>
 <script src=".build/tests/core/tapins/sizing.js"></script>
